# PyCompanyData

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  mypy.ini  noxfile.py  pycodat.code-workspace  pyproject.toml  setup.cfg
.github/workflows/: github-actions.yml
docs/source/: conf.py  index.rst  intro.rst  modules.rst  pycodat.data_types.platform.rst  pycodat.data_types.rst  pycodat.handlers.platform.rst  pycodat.handlers.rst  pycodat.rst
src/pycodat/: __init__.py  main.py  rest_adapter.py  tryout.py
src/pycodat/clients/: accounting_client.py  base_client.py  platform_client.py
src/pycodat/data_types/: pagination.py
src/pycodat/handlers/: base.py
src/pycompanydata/: __init__.py
src/pycompanydata/clients/: accounting_client.py  base_client.py  platform_client.py
src/pycompanydata/data_types/: pagination.py
src/pycompanydata/handlers/: base.py
tests/: conftest.py  test_main_class.py  test_pycodat.py  test_rest_adapter.py
tests/test_clients.py/: test_client.py
tests/test_clients.py/test_accounting_client/: conftest.py  test_accounting_client.py
tests/test_clients.py/test_base_client/: test_base_client.py
tests/test_clients.py/test_platform_client/: conftest.py  test_platform_client.py
tests/test_data_types/: test_accounting_data_types.py  test_platform_data_types.py
tests/test_handlers/: conftest.py  test_handler_initialization.py  test_platform_handlers.py
tests/test_handlers/test_accounting_handlers/: conftest.py  test_accounting_handlers.py
tests/test_handlers/test_platform_handlers/: conftest.py  test_platform_handlers.py
(+47 files in other folders)
