[tool.poetry]
name = "pycodat"
version = "0.22.12.1"
description = "A Python client library for interacting with the Codat API"
authors = ["Peter Simpson <p.simpson@codat.io>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pydantic = "^1.9.2"
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
coverage = "^6.4.4"
pre-commit = "^2.20.0"
mypy = "^0.971"
types-requests = "^2.28.8"
bandit = "^1.7.4"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
